2013-03-15  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: No need to copy Linux sources

2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-linux-generic.exp: Move extra file loads to after the main
	config file is loaded. Add gdb-extra.exp. Mark as using GDB stub.
	* ftp-extra.exp: Use filename from before transfer to change mode
	and return result.
	* gdb-extra.exp: Created.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Move most gdbserver config
	to arc-linux-generic.exp
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Set most gdbserver
	config.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-nsim.exp: Correct code accidentally
	introduced.

2013-02-20  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Configure to run with
	gdbserver target if GDB is the tool.
	* dejagnu/baseboards/arc-linux-nsim.exp: Likewise.
	* dejagnu/baseboards/arc-linux-generic.exp: Decide base
	configuration to load based on tool.
	* dejagnu/ftp-extra.exp (ftp_download): Add code to set executable
	bits of transferred file if necessary.
	* dejagnu/telnet-extra.exp (telnet_spawn): New proc.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-init.sh (run_check, save_res): Remove use of bash "function"
	keywords.
	* build-all.sh: Correct comment typo.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Use "=" not "==" in [] comparisons.

2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh, run-tests.sh: Correct handling of --jobs, --load
	and --single-thread.
	* build-uclibc.sh: Correct typo in gdbserver config.

2013-02-05  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* dejagnu/baseboards/arc-linux-aa4.exp: Correct layout
	* dejagnu/baseboards/arc-linux-nsim.exp: Correct assignment of
	hostname.
